--- a/index.html
+++ b/index.html
@@ -75,6 +75,8 @@
                                 <li><a href="#">Tubos e Conexões PVC</a></li>
                                 <li><a href="#">Tubos e Conexões Cobre</a></li>
                                 <li><a href="#">Caixas d'Água</a></li>
+                                <li><a href="#">Registros e Válvulas</a></li>
+                                <li><a href="#">Aquecedores de Água</a></li>
                                 <li><a href="#">Bombas D'água</a></li>
                             </ul>
                         </div>
@@ -92,24 +94,26 @@
                             <ul class="submenu">
                                 <li><a href="#">Aquecedores a Gás</a></li>
                                 <li><a href="#">Aquecedores Elétricos</a></li>
+                                <li><a href="#">Aquecedores Solares</a></li>
+                                <li><a href="#">Boilers</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
                             <a href="#">Tigre <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
-                                <li><a href="#">Linha Tigre Pro</a></li>
-                                <li><a href="#">Destaques Tigre</a></li>
-                                <li><a href="#">Canos e Conexões</a></li>
+                                <li><a href="#">Linha Água Fria Tigre</a></li>
+                                <li><a href="#">Linha Esgoto Tigre</a></li>
+                                <li><a href="#">Linha Eletricidade Tigre</a></li>
+                                <li><a href="#">Caixas D'água Tigre</a></li>
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Suvinil <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="suvinil-produtos.html">Suvinil <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
-                                <li><a href="#">Linha Rende e Cobre Muito</a></li>
-                                <li><a href="#">Linha Select</a></li>
-                                <li><a href="#">Linha Premium</a></li>
-                                <li><a href="#">Cores Personalizadas</a></li>
-                                <li><a href="#">Preparação de Superfícies</a></li>
+                                <li><a href="suvinil-produtos.html#acrilica">Tinta Acrílica Suvinil</a></li>
+                                <li><a href="suvinil-produtos.html#latex">Tinta Látex Suvinil</a></li>
+                                <li><a href="suvinil-produtos.html#cores">Cores Personalizadas</a></li>
+                                <li><a href="suvinil-produtos.html#preparacao">Preparação de Superfícies</a></li>
                             </ul>
                         </div>
                     </div>
@@ -123,7 +127,7 @@
                     <li><i class="fa-solid fa-tape"></i><span>Adesivos</span></li>
                     <li><i class="fa-solid fa-fire-burner"></i><span>Aquecedores</span></li>
                     <li><i class="fa-solid fa-paw"></i><span>Tigre</span></li>
-                    <li><i class="fa-solid fa-tint"></i><span>Suvinil</span></li>
+                    <li class="suvinil-link"><a href="suvinil-produtos.html"><i class="fa-solid fa-tint"></i><span>Suvinil</span></a></li>
                 </ul>
             </div>
         </nav>
