--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <div class="wrapper">
             <div class="header-top-bar">
                 <div class="logo">
-                    <img src="logo-rezende.jpg" alt="Logo Rezende Materiais para Construção">
+                    <a href="index.html">
+                        <img src="logo-rezende.jpg" alt="Logo Rezende Materiais para Construção">
+                    </a>
                 </div>
                 <div class="search-bar">
                     <input type="text" placeholder="O que procura?">
