--- a/index.html
+++ b/index.html
@@ -141,28 +141,28 @@
         </section>
 
         <section class="product-categories wrapper">
-            <div class="category-card">
+            <div class="category-card common-card-styles">
                 <img src="https://images.tcdn.com.br/img/img_prod/1134831/misturador_monocomando_lift_docol_51_1_f119439d9f8458249c3a4bc774bba811.png" alt="Categoria Torneiras">
                 <div class="card-info">
                     <h3>TORNEIRAS</h3>
                     <p>Linha Premium</p>
                 </div>
             </div>
-            <div class="category-card">
+            <div class="category-card common-card-styles">
                 <img src="https://imgproxy.domestika.org/unsafe/w:1200/rs:fill/plain/src://blog-post-open-graph-covers/000/003/917/3917-original.png?1592159567" alt="Categoria Tintas">
                 <div class="card-info">
                     <h3>Suvinil</h3>
                     <p>Cores e Acabamentos</p>
                 </div>
             </div>
-            <div class="category-card">
+            <div class="category-card common-card-styles">
                 <img src="https://dcdn-us.mitiendanube.com/stores/003/317/653/products/tubo-de-agua-tigre61-31fdd20ebfd359223016887535321368-1024-1024.png" alt="Categoria Tigre">
                 <div class="card-info">
                     <h3>CANOS</h3>
                     <p>Soluções Hidráulicas</p>
-                C</div>
+                </div>
             </div>
-            <div class="category-card">
+            <div class="category-card common-card-styles">
                 <img src="https://www.queveks.com.br/upload/ckeditor/images/Ambiente_todo_decorado.png" alt="Categoria Novidades">
                 <div class="card-info">
                     <h3>NOVIDADES</h3>
