--- a/index.html
+++ b/index.html
@@ -148,13 +148,13 @@
                     <p>Linha Premium</p>
                 </div>
             </div>
-            <div class="category-card common-card-styles">
+            <a href="suvinil-produtos.html" class="category-card common-card-styles">
                 <img src="https://imgproxy.domestika.org/unsafe/w:1200/rs:fill/plain/src://blog-post-open-graph-covers/000/003/917/3917-original.png?1592159567" alt="Categoria Tintas">
                 <div class="card-info">
                     <h3>Suvinil</h3>
                     <p>Cores e Acabamentos</p>
                 </div>
-            </div>
+            </a>
             <div class="category-card common-card-styles">
                 <img src="https://dcdn-us.mitiendanube.com/stores/003/317/653/products/tubo-de-agua-tigre61-31fdd20ebfd359223016887535321368-1024-1024.png" alt="Categoria Tigre">
                 <div class="card-info">
