--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <div class="wrapper nav-wrapper">
                 <div class="departments-menu">
                     <button class="departments-button"><i class="fa-solid fa-bars"></i> Departamentos</button>
-                    <div class="departments-dropdown-content">
+                    <div class="departments-dropdown-content" id="departmentsDropdown">
+                        <button class="close-departments-button" id="closeDepartmentsBtn"><i class="fa-solid fa-times"></i> Fechar</button>
                         <div class="has-submenu">
                             <a href="#">Descontos <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
@@ -42,7 +43,7 @@
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Elétrica <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Elétrica<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Fios e Cabos</a></li>
                                 <li><a href="#">Tomadas e Interruptores</a></li>
@@ -52,7 +53,7 @@
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Argamassa <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Argamassa<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Argamassa AC-I</a></li>
                                 <li><a href="#">Argamassa AC-II</a></li>
@@ -62,7 +63,7 @@
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Tintas <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Tintas<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Tinta Acrílica</a></li>
                                 <li><a href="#">Tinta Látex</a></li>
@@ -72,7 +73,7 @@
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Hidráulica <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Hidráulica<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Tubos e Conexões PVC</a></li>
                                 <li><a href="#">Tubos e Conexões Cobre</a></li>
@@ -83,7 +84,7 @@
                             </ul>
                         </div>
                          <div class="has-submenu">
-                            <a href="#">Adesivos <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Adesivos<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Colas para Madeira</a></li>
                                 <li><a href="#">Adesivos de Contato</a></li>
@@ -92,7 +93,7 @@
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Aquecedores <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Aquecedores<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Aquecedores a Gás</a></li>
                                 <li><a href="#">Aquecedores Elétricos</a></li>
@@ -101,7 +102,7 @@
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="#">Tigre <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="#">Tigre<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="#">Linha Água Fria Tigre</a></li>
                                 <li><a href="#">Linha Esgoto Tigre</a></li>
@@ -110,7 +111,7 @@
                             </ul>
                         </div>
                         <div class="has-submenu">
-                            <a href="suvinil-produtos.html">Suvinil <i class="fa-solid fa-caret-right submenu-arrow"></i></a>
+                            <a href="suvinil-produtos.html">Suvinil<i class="fa-solid fa-caret-right submenu-arrow"></i></a>
                             <ul class="submenu">
                                 <li><a href="suvinil-produtos.html#acrilica">Tinta Acrílica Suvinil</a></li>
                                 <li><a href="suvinil-produtos.html#latex">Tinta Látex Suvinil</a></li>
@@ -171,6 +172,201 @@
             </div>
         </section>
     </main>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // OBS: A lógica da sidebar de filtros abaixo é mais relevante para suvinil-produtos.html.
+            // Ela é mantida aqui para consistência do template de script, mas pode não ter elementos correspondentes no index.html.
+            const filterTitles = document.querySelectorAll('.filter-group h3');
+            const openFiltersBtn = document.getElementById('openFiltersBtn');
+            const closeFiltersBtn = document.getElementById('closeFiltersBtn');
+            const sidebarFilters = document.getElementById('sidebarFilters');
+            const filtersOverlay = document.getElementById('filtersOverlay');
+
+            function initializeFilterState() {
+                filterTitles.forEach(title => {
+                    const content = title.nextElementSibling;
+                    if (window.innerWidth <= 768) {
+                        title.classList.add('collapsed');
+                        if (content && content.classList.contains('filter-content')) {
+                            content.classList.remove('show');
+                        }
+                    } else {
+                        title.classList.remove('collapsed', 'expanded');
+                        if (content && content.classList.contains('filter-content')) {
+                            content.classList.add('show');
+                        }
+                    }
+                });
+
+                if (window.innerWidth <= 768) {
+                    if (openFiltersBtn) openFiltersBtn.style.display = 'flex';
+                    if (sidebarFilters) sidebarFilters.classList.remove('active');
+                    if (filtersOverlay) filtersOverlay.classList.remove('active');
+                    document.body.style.overflow = '';
+                } else {
+                    if (openFiltersBtn) openFiltersBtn.style.display = 'none';
+                    if (sidebarFilters) sidebarFilters.classList.remove('active');
+                    if (filtersOverlay) filtersOverlay.classList.remove('active');
+                    document.body.style.overflow = '';
+                }
+            }
+
+            filterTitles.forEach(title => {
+                title.addEventListener('click', function() {
+                    const content = this.nextElementSibling;
+                    if (content && content.classList.contains('filter-content')) {
+                        content.classList.toggle('show');
+                        this.classList.toggle('collapsed');
+                        this.classList.toggle('expanded');
+                    }
+                });
+            });
+
+            if (openFiltersBtn) {
+                openFiltersBtn.addEventListener('click', function() {
+                    if (sidebarFilters) sidebarFilters.classList.add('active');
+                    if (filtersOverlay) filtersOverlay.classList.add('active');
+                    document.body.style.overflow = 'hidden';
+                });
+            }
+
+            if (closeFiltersBtn) {
+                closeFiltersBtn.addEventListener('click', function() {
+                    if (sidebarFilters) sidebarFilters.classList.remove('active');
+                    if (filtersOverlay) filtersOverlay.classList.remove('active');
+                    document.body.style.overflow = '';
+                });
+            }
+
+            if (filtersOverlay) {
+                filtersOverlay.addEventListener('click', function() {
+                    if (sidebarFilters) sidebarFilters.classList.remove('active');
+                    if (filtersOverlay) filtersOverlay.classList.remove('active');
+                    document.body.style.overflow = '';
+                });
+            }
+
+            // CÓDIGO PARA O MENU DE DEPARTAMENTOS
+            const departmentsDropdown = document.getElementById('departmentsDropdown');
+            const departmentsButton = document.querySelector('.departments-button'); // Botão que abre o menu
+            const closeDepartmentsBtn = document.getElementById('closeDepartmentsBtn'); // Botão de fechar
+
+            // Função para fechar o dropdown de departamentos
+            function closeDepartmentsDropdown() {
+                if (departmentsDropdown) {
+                    departmentsDropdown.classList.remove('active-mobile-dropdown');
+                    document.body.style.overflow = ''; // Restaura rolagem do body
+                    if (departmentsButton) departmentsButton.focus(); // Opcional: foca no botão para acessibilidade
+                }
+            }
+
+            // Adiciona evento de clique ao botão de fechar
+            if (closeDepartmentsBtn) {
+                closeDepartmentsBtn.addEventListener('click', function() {
+                    closeDepartmentsDropdown();
+                });
+            }
+
+            // Adiciona evento de clique ao botão "Departamentos" para alternar visibilidade em mobile
+            if (departmentsButton) {
+                departmentsButton.addEventListener('click', function() {
+                    // Controla o menu de departamentos em mobile
+                    if (window.innerWidth <= 768) { 
+                        if (departmentsDropdown) {
+                            departmentsDropdown.classList.toggle('active-mobile-dropdown');
+                            if (departmentsDropdown.classList.contains('active-mobile-dropdown')) {
+                                document.body.style.overflow = 'hidden'; // Impede rolagem do body
+                            } else {
+                                document.body.style.overflow = ''; // Restaura rolagem
+                            }
+                        }
+                    }
+                    // Em desktop, o comportamento de hover CSS já cuida da abertura/fechamento
+                });
+            }
+
+            // Lógica para fechar o dropdown ao clicar fora dele em mobile
+            document.addEventListener('click', function(event) {
+                if (window.innerWidth <= 768) { // Apenas em mobile
+                    const isClickInsideDropdown = departmentsDropdown && departmentsDropdown.contains(event.target);
+                    const isClickOnDepartmentsButton = departmentsButton && departmentsButton.contains(event.target);
+
+                    // Fecha o dropdown se estiver aberto e o clique não foi dentro dele nem no botão que o abre
+                    if (departmentsDropdown && departmentsDropdown.classList.contains('active-mobile-dropdown') && !isClickInsideDropdown && !isClickOnDepartmentsButton) {
+                        closeDepartmentsDropdown();
+                    }
+                }
+            });
+
+            // Adapta o comportamento do dropdown ao redimensionar (de desktop para mobile e vice-versa)
+            function handleDepartmentsDropdownResize() {
+                if (departmentsDropdown) {
+                    if (window.innerWidth <= 768) {
+                        // Garante que o dropdown de departamentos esteja oculto e controle via JS
+                        departmentsDropdown.classList.remove('active-mobile-dropdown');
+                        departmentsDropdown.style.display = ''; // Limpa o display style para que o CSS de off-canvas atue
+                        document.body.style.overflow = ''; // Garante rolagem do body
+                    } else {
+                        // Em desktop, garante que o display seja controlado por CSS (hover) e a classe mobile seja removida
+                        departmentsDropdown.classList.remove('active-mobile-dropdown');
+                        departmentsDropdown.style.display = ''; // Permite que o CSS externo (hover) atue
+                        document.body.style.overflow = ''; // Garante rolagem do body
+                    }
+                }
+            }
+
+            window.addEventListener('resize', handleDepartmentsDropdownResize);
+            handleDepartmentsDropdownResize(); // Inicializa ao carregar
+
+            // CÓDIGO PARA OS SUBMENUS ANINHADOS NO MENU DE DEPARTAMENTOS EM MOBILE
+            const departmentSubmenuParents = document.querySelectorAll('.departments-dropdown-content .has-submenu');
+
+            departmentSubmenuParents.forEach(parentItem => {
+                const link = parentItem.querySelector('a');
+                const submenu = parentItem.querySelector('.submenu');
+                const arrow = parentItem.querySelector('.submenu-arrow');
+
+                link.addEventListener('click', function(event) {
+                    if (window.innerWidth <= 768) { // Apenas em mobile
+                        event.preventDefault(); // Impede a navegação imediata em mobile
+                        if (submenu) {
+                            submenu.classList.toggle('open');
+                            if (arrow) {
+                                arrow.classList.toggle('rotate');
+                            }
+                        }
+                    }
+                    // Em desktop, o link deve navegar normalmente e o hover CSS cuida do submenu
+                });
+
+                // Função para inicializar o estado dos submenus aninhados
+                function initializeSubmenuState() {
+                    if (window.innerWidth <= 768) { // Mobile
+                        if (submenu) submenu.classList.remove('open'); // Garante que estejam fechados
+                        if (arrow) arrow.classList.remove('rotate'); // Garante que a seta não esteja girada
+                    } else { // Desktop
+                        // Em desktop, o comportamento é por CSS (hover). Apenas removemos as classes de controle mobile.
+                        if (submenu) submenu.classList.remove('open');
+                        if (arrow) arrow.classList.remove('rotate');
+                    }
+                }
+
+                initializeSubmenuState(); // Inicializa o estado do submenu ao carregar
+                window.addEventListener('resize', initializeSubmenuState); // Adiciona listener para redimensionamento
+            });
+
+            // A chamada de initializeFilterState() e seu listener de redimensionamento
+            // já foram movidos para o escopo global ou ajustados acima se necessário.
+            // Se existirem múltiplos initializeFilterState, certifique-se de que a que
+            // controla os filtros esteja onde os elementos de filtro existem.
+            // Para index.html, o foco é no departments menu.
+            // No suvinil-produtos.html, a função initializeFilterState completa para filtros deve permanecer.
+
+            // Chame initializeFilterState() e adicione o listener de resize apenas UMA VEZ.
+            // O código acima já faz isso se este for o script único na página.
+        });
+    </script>
 
 </body>
 </html>
